--- a/packages/datastore-extension/package.json
+++ b/packages/datastore-extension/package.json
@@ -33,7 +33,12 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^1.0.1",
-    "@jupyterlab/datastore": "^1.0.0"
+    "@jupyterlab/apputils": "^1.0.1",
+    "@jupyterlab/datastore": "^1.0.0",
+    "@phosphor/algorithm": "^1.1.3",
+    "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/datastore": "0.7.2",
+    "react": "~16.8.4"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
@@ -43,7 +48,6 @@
     "access": "public"
   },
   "jupyterlab": {
-    "extension": true,
-    "schemaDir": "schema"
+    "extension": true
   }
 }
