--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@jupyterlab/notebook": "^1.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
-    "@phosphor/widgets": "^1.8.0"
+    "@phosphor/widgets": "^1.8.0",
+    "vscode-debugprotocol": "1.35.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
