--- a/packages/settingeditor/package.json
+++ b/packages/settingeditor/package.json
@@ -38,6 +38,7 @@
     "@jupyterlab/apputils": "^1.0.1",
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/inspector": "^1.0.1",
     "@jupyterlab/rendermime": "^1.0.1",
     "@phosphor/commands": "^1.6.3",
