--- a/packages/codeeditor/package.json
+++ b/packages/codeeditor/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/observables": "^2.2.0",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/datastore": "0.7.2",
