--- a/packages/codemirror/package.json
+++ b/packages/codemirror/package.json
@@ -36,11 +36,13 @@
     "@jupyterlab/apputils": "^1.0.1",
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/observables": "^2.2.0",
     "@jupyterlab/statusbar": "^1.0.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/commands": "^1.6.3",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/datastore": "0.7.2",
     "@phosphor/disposable": "^1.2.0",
     "@phosphor/signaling": "^1.2.3",
     "@phosphor/widgets": "^1.8.0",
