--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/cells": "^1.0.1",
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/observables": "^2.2.0",
     "@jupyterlab/rendermime": "^1.0.1",
     "@jupyterlab/services": "^4.0.1",
