--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/cells": "^1.0.1",
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/docregistry": "^1.0.1",
     "@jupyterlab/observables": "^2.2.0",
     "@jupyterlab/rendermime": "^1.0.1",
@@ -47,6 +48,7 @@
     "@jupyterlab/ui-components": "^1.0.0",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/disposable": "^1.2.0",
     "@phosphor/domutils": "^1.1.3",
     "@phosphor/dragdrop": "^1.3.3",
     "@phosphor/messaging": "^1.2.3",
