--- a/packages/statusbar/package.json
+++ b/packages/statusbar/package.json
@@ -34,6 +34,7 @@
     "@jupyterlab/apputils": "^1.0.1",
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/services": "^4.0.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
