--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -48,6 +48,7 @@
     "@jupyterlab/ui-components": "^1.0.0",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/datastore": "0.7.2",
     "@phosphor/disposable": "^1.2.0",
     "@phosphor/domutils": "^1.1.3",
     "@phosphor/dragdrop": "^1.3.3",
