--- a/packages/running-extension/package.json
+++ b/packages/running-extension/package.json
@@ -36,9 +36,9 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^1.1.0-alpha.1",
+    "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/running": "^1.1.0-alpha.1",
-    "@jupyterlab/coreutils": "^3.0.0",
-    "@jupyterlab/services": "^4.0.2",
+    "@jupyterlab/services": "^4.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3"
   },
   "devDependencies": {
