--- a/packages/terminal-extension/package.json
+++ b/packages/terminal-extension/package.json
@@ -41,9 +41,9 @@
     "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/launcher": "^1.1.0-alpha.1",
     "@jupyterlab/mainmenu": "^1.1.0-alpha.1",
+    "@jupyterlab/running": "^1.1.0-alpha.1",
+    "@jupyterlab/services": "^4.1.0-alpha.1",
     "@jupyterlab/terminal": "^1.1.0-alpha.1",
-    "@jupyterlab/running": "^1.0.2",
-    "@jupyterlab/services": "^4.0.2",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/widgets": "^1.8.0"
   },
