Actually make coreutils null strict

--- a/packages/coreutils/tsconfig.json
+++ b/packages/coreutils/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "lib",
     "rootDir": "src",
     "module": "commonjs",
+    "strictNullChecks": true,
     "types": ["node"]
   },
   "files": ["src/plugin-schema.json"],
