--- a/examples/filebrowser/package.json
+++ b/examples/filebrowser/package.json
@@ -16,6 +16,7 @@
     "@jupyterlab/fileeditor": "^1.1.0-alpha.1",
     "@jupyterlab/services": "^4.1.0-alpha.1",
     "@jupyterlab/theme-light-extension": "^1.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/commands": "^1.6.3",
     "@phosphor/widgets": "^1.8.0",
