--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -42,6 +42,7 @@
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
     "@jupyterlab/rendermime-interfaces": "^1.4.0-alpha.1",
     "@jupyterlab/services": "^4.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/application": "^1.6.3",
     "@phosphor/commands": "^1.6.3",
