--- a/packages/apputils-extension/package.json
+++ b/packages/apputils-extension/package.json
@@ -41,6 +41,7 @@
     "@jupyterlab/apputils": "^1.1.0-alpha.1",
     "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/mainmenu": "^1.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/commands": "^1.6.3",
     "@phosphor/coreutils": "^1.3.1",
