--- a/packages/filebrowser/package.json
+++ b/packages/filebrowser/package.json
@@ -41,6 +41,7 @@
     "@jupyterlab/docregistry": "^1.1.0-alpha.1",
     "@jupyterlab/services": "^4.1.0-alpha.1",
     "@jupyterlab/statusbar": "^1.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
