--- a/packages/launcher/package.json
+++ b/packages/launcher/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@jupyterlab/apputils": "^1.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/commands": "^1.6.3",
     "@phosphor/coreutils": "^1.3.1",
