--- a/packages/settingeditor/package.json
+++ b/packages/settingeditor/package.json
@@ -40,6 +40,7 @@
     "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/inspector": "^1.1.0-alpha.1",
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/commands": "^1.6.3",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/messaging": "^1.2.3",
