--- a/packages/statusbar/package.json
+++ b/packages/statusbar/package.json
@@ -35,6 +35,7 @@
     "@jupyterlab/codeeditor": "^1.1.0-alpha.1",
     "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/services": "^4.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
