--- a/packages/tabmanager-extension/package.json
+++ b/packages/tabmanager-extension/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^1.1.0-alpha.1",
+    "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/widgets": "^1.8.0"
   },
