--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.9.0",
     "@blueprintjs/select": "^3.3.0",
-    "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/messaging": "^1.2.3",
     "@phosphor/virtualdom": "^1.1.3",
