--- a/package.json
+++ b/package.json
@@ -39,22 +39,24 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.0.0",
-    "@jupyterlab/apputils": "^1.0.0",
-    "@jupyterlab/codeeditor": "^1.0.0",
-    "@jupyterlab/console": "^1.0.2",
-    "@jupyterlab/coreutils": "^3.0.0",
-    "@jupyterlab/fileeditor": "^1.0.2",
-    "@jupyterlab/launcher": "^1.0.0",
-    "@jupyterlab/notebook": "^1.0.0",
+    "@jupyterlab/application": "^1.1.0-alpha.1",
+    "@jupyterlab/apputils": "^1.1.0-alpha.1",
+    "@jupyterlab/codeeditor": "^1.1.0-alpha.1",
+    "@jupyterlab/console": "^1.1.0-alpha.1",
+    "@jupyterlab/coreutils": "^3.1.0-alpha.1",
+    "@jupyterlab/fileeditor": "^1.1.0-alpha.1",
+    "@jupyterlab/launcher": "^1.1.0-alpha.1",
+    "@jupyterlab/services": "^4.1.0-alpha.1",
+    "@jupyterlab/notebook": "^1.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
-    "@phosphor/widgets": "^1.8.0"
+    "@phosphor/widgets": "^1.8.0",
+    "vscode-debugprotocol": "1.35.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@jupyterlab/testutils": "^1.0.2",
+    "@jupyterlab/testutils": "^1.1.0-alpha.1",
     "@types/chai": "^4.1.3",
     "@types/jest": "^24.0.17",
     "chai": "^4.2.0",
