--- a/packages/outputconsole/package.json
+++ b/packages/outputconsole/package.json
@@ -40,6 +40,7 @@
     "@jupyterlab/services": "^4.1.0-alpha.1",
     "@jupyterlab/ui-components": "^1.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/disposable": "^1.2.0",
     "@phosphor/messaging": "^1.2.3",
     "@phosphor/signaling": "^1.2.3",
     "@phosphor/widgets": "^1.8.0",
