--- a/packages/attachments/tsconfig.json
+++ b/packages/attachments/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../coreutils"
     },
     {
+      "path": "../datastore"
+    },
+    {
       "path": "../observables"
     },
     {
