--- a/packages/cells/tsconfig.json
+++ b/packages/cells/tsconfig.json
@@ -22,7 +22,7 @@
       "path": "../coreutils"
     },
     {
-      "path": "../observables"
+      "path": "../datastore"
     },
     {
       "path": "../outputarea"
