--- a/packages/outputarea/tsconfig.json
+++ b/packages/outputarea/tsconfig.json
@@ -13,7 +13,7 @@
       "path": "../coreutils"
     },
     {
-      "path": "../observables"
+      "path": "../datastore"
     },
     {
       "path": "../rendermime"
