--- a/packages/attachments/package.json
+++ b/packages/attachments/package.json
@@ -36,9 +36,11 @@
   },
   "dependencies": {
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/observables": "^2.2.0",
     "@jupyterlab/rendermime": "^1.0.1",
     "@jupyterlab/rendermime-interfaces": "^1.3.0",
+    "@phosphor/datastore": "0.7.2",
     "@phosphor/disposable": "^1.2.0",
     "@phosphor/signaling": "^1.2.3"
   },
