--- a/packages/cells/package.json
+++ b/packages/cells/package.json
@@ -40,14 +40,15 @@
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/codemirror": "^1.0.1",
     "@jupyterlab/coreutils": "^3.0.0",
-    "@jupyterlab/observables": "^2.2.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/outputarea": "^1.0.1",
     "@jupyterlab/rendermime": "^1.0.1",
     "@jupyterlab/services": "^4.0.1",
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/datastore": "0.7.2",
+    "@phosphor/disposable": "^1.2.0",
     "@phosphor/messaging": "^1.2.3",
-    "@phosphor/signaling": "^1.2.3",
     "@phosphor/virtualdom": "^1.1.3",
     "@phosphor/widgets": "^1.8.0",
     "react": "~16.8.4"
