--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -41,6 +41,7 @@
     "@jupyterlab/coreutils": "^3.0.0",
     "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/observables": "^2.2.0",
+    "@jupyterlab/outputarea": "^1.0.1",
     "@jupyterlab/rendermime": "^1.0.1",
     "@jupyterlab/services": "^4.0.1",
     "@phosphor/algorithm": "^1.1.3",
