--- a/packages/console/tsconfig.json
+++ b/packages/console/tsconfig.json
@@ -25,6 +25,9 @@
       "path": "../observables"
     },
     {
+      "path": "../outputarea"
+    },
+    {
       "path": "../rendermime"
     },
     {
