--- a/packages/documentsearch/package.json
+++ b/packages/documentsearch/package.json
@@ -37,6 +37,7 @@
     "@jupyterlab/codeeditor": "^1.0.0",
     "@jupyterlab/codemirror": "^1.0.1",
     "@jupyterlab/coreutils": "^3.0.0",
+    "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/fileeditor": "^1.0.1",
     "@jupyterlab/notebook": "^1.0.1",
     "@phosphor/coreutils": "^1.3.1",
