--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -42,6 +42,7 @@
     "@jupyterlab/datastore": "^1.0.0",
     "@jupyterlab/docregistry": "^1.0.1",
     "@jupyterlab/observables": "^2.2.0",
+    "@jupyterlab/outputarea": "^1.0.1",
     "@jupyterlab/rendermime": "^1.0.1",
     "@jupyterlab/services": "^4.0.1",
     "@jupyterlab/statusbar": "^1.0.1",
