--- a/packages/notebook/tsconfig.json
+++ b/packages/notebook/tsconfig.json
@@ -28,6 +28,9 @@
       "path": "../observables"
     },
     {
+      "path": "../outputarea"
+    },
+    {
       "path": "../rendermime"
     },
     {
