--- a/packages/rendermime/tsconfig.json
+++ b/packages/rendermime/tsconfig.json
@@ -16,7 +16,7 @@
       "path": "../coreutils"
     },
     {
-      "path": "../observables"
+      "path": "../datastore"
     },
     {
       "path": "../rendermime-interfaces"
