--- a/packages/filebrowser/package.json
+++ b/packages/filebrowser/package.json
@@ -35,6 +35,7 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
+    "@jupyterlab/rendermime": "^1.1.0-alpha.2",
     "@jupyterlab/apputils": "^1.2.0-alpha.0",
     "@jupyterlab/coreutils": "^3.2.0-alpha.0",
     "@jupyterlab/docmanager": "^1.2.0-alpha.0",
@@ -42,14 +43,14 @@
     "@jupyterlab/services": "^4.2.0-alpha.0",
     "@jupyterlab/statusbar": "^1.2.0-alpha.0",
     "@jupyterlab/ui-components": "^1.2.0-alpha.0",
-    "@phosphor/algorithm": "^1.1.3",
+    "@phosphor/algorithm": "^1.2.0",
     "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/disposable": "^1.2.0",
+    "@phosphor/disposable": "^1.3.0",
     "@phosphor/domutils": "^1.1.3",
-    "@phosphor/dragdrop": "^1.3.3",
-    "@phosphor/messaging": "^1.2.3",
-    "@phosphor/signaling": "^1.2.3",
-    "@phosphor/widgets": "^1.8.0",
+    "@phosphor/dragdrop": "^1.3.0",
+    "@phosphor/messaging": "^1.3.0",
+    "@phosphor/signaling": "^1.3.0",
+    "@phosphor/widgets": "^1.9.0",
     "react": "~16.8.4"
   },
   "devDependencies": {
