--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,13 +30,13 @@ jobs:
         displayName: 'install'
         inputs:
           targetType: 'filePath'
-          filePath: ./scripts/travis_install.sh
+          filePath: ./scripts/ci_install.sh
       - script: python -m pip install virtualenv
       - task: Bash@3
         displayName: 'script'
         inputs:
           targetType: 'filePath'
-          filePath: ./scripts/travis_script.sh
+          filePath: ./scripts/ci_script.sh
       - task: PublishTestResults@2
         displayName: 'publish test results'
         condition: variables['testResultsFiles']
@@ -48,7 +48,7 @@ jobs:
         displayName: 'after_success'
         inputs:
           targetType: 'filePath'
-          filePath: ./scripts/travis_after_success.sh
+          filePath: ./scripts/ci_after_success.sh
 
   - job: 'Windows'
     pool:
