--- a/packages/outputconsole-extension/package.json
+++ b/packages/outputconsole-extension/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/notebook": "^1.1.0-alpha.1",
     "@jupyterlab/outputconsole": "^0.1.0-alpha.1",
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
+    "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
     "react": "~16.8.4"
   },
