--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ packages/nbconvert-css/style/
 packages/theme-*/static
 node_modules
 .cache
-.vscode
 *.py[co]
 .pytest_cache
 __pycache__
@@ -34,7 +33,6 @@ __pycache__
 
 *.swp
 *.map
-.idea/
 
 coverage/
 tests/**/coverage
@@ -53,3 +51,10 @@ yarn-error.log
 junit.xml
 
 *.tsbuildinfo
+
+# jetbrains IDE stuff
+*.iml
+.idea/
+
+# ms IDE stuff
+.vscode
