Let anyone set the rendermime for a logger, so we lazily create it only when a message is sent.

--- a/packages/outputconsole-extension/tsconfig.json
+++ b/packages/outputconsole-extension/tsconfig.json
@@ -26,6 +26,12 @@
     },
     {
       "path": "../rendermime"
+    },
+    {
+      "path": "../services"
+    },
+    {
+      "path": "../coreutils"
     }
   ]
 }
