--- a/packages/outputconsole-extension/package.json
+++ b/packages/outputconsole-extension/package.json
@@ -34,11 +34,13 @@
   "dependencies": {
     "@jupyterlab/application": "^1.1.0-alpha.1",
     "@jupyterlab/apputils": "^1.1.0-alpha.1",
+    "@jupyterlab/coreutils": "^3.1.0-alpha.1",
     "@jupyterlab/docregistry": "^1.1.0-alpha.1",
     "@jupyterlab/mainmenu": "^1.1.0-alpha.1",
     "@jupyterlab/notebook": "^1.1.0-alpha.1",
     "@jupyterlab/outputconsole": "^0.1.0-alpha.1",
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
+    "@jupyterlab/services": "^4.1.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
     "react": "~16.8.4"
