--- a/jupyterlab/staging/package.json
+++ b/jupyterlab/staging/package.json
@@ -168,6 +168,7 @@
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/datagrid": "^0.1.9",
     "@phosphor/disposable": "^1.2.0",
+    "@phosphor/domutils": "^1.1.3",
     "@phosphor/messaging": "^1.2.3",
     "@phosphor/properties": "^1.1.3",
     "@phosphor/signaling": "^1.2.3",
