--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -38,6 +38,7 @@
     "@phosphor/properties": "^1.1.3",
     "@phosphor/signaling": "^1.2.3",
     "ajv": "^6.5.5",
+    "date-fns": "~2.0.1",
     "json5": "^2.1.0",
     "minimist": "~1.2.0",
     "moment": "^2.24.0",
