--- a/packages/cells/tsconfig.json
+++ b/packages/cells/tsconfig.json
@@ -22,6 +22,9 @@
       "path": "../coreutils"
     },
     {
+      "path": "../filebrowser"
+    },
+    {
       "path": "../observables"
     },
     {
