enable building of packages with shallowly nested workspaces

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
       "dev_mode",
       "examples/*",
       "packages/*",
+      "packages/*/*",
+      "packages/*/examples/*",
+      "packages/*/packages/*",
       "packages/services/examples/node",
       "packages/services/examples/browser",
       "packages/services/examples/typescript-browser-with-output",
