Remove keyowrd used by third-party extensions

--- a/packages/htmlviewer-extension/package.json
+++ b/packages/htmlviewer-extension/package.json
@@ -4,8 +4,7 @@
   "description": "JupyterLab extension to render HTML files",
   "keywords": [
     "jupyter",
-    "jupyterlab",
-    "jupyterlab-extension"
+    "jupyterlab"
   ],
   "homepage": "https://github.com/jupyterlab/jupyterlab",
   "bugs": {
