--- a/packages/running/package.json
+++ b/packages/running/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@jupyterlab/apputils": "^1.2.0-alpha.0",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/disposable": "^1.3.0",
     "@phosphor/signaling": "^1.3.0",
     "react": "~16.8.4"
   },
