--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -32,6 +32,7 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
+    "@phosphor/algorithm": "^1.2.0",
     "@phosphor/commands": "^1.7.0",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.3.0",
