--- a/packages/documentsearch/package.json
+++ b/packages/documentsearch/package.json
@@ -44,6 +44,7 @@
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/widgets": "^1.9.0",
     "codemirror": "~5.47.0",
+    "lodash": "~4.17.15",
     "react": "~16.8.4"
   },
   "devDependencies": {
