--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -70,6 +70,8 @@
     "@jupyterlab/json-extension": "^1.1.0-alpha.1",
     "@jupyterlab/launcher": "^1.1.0-alpha.1",
     "@jupyterlab/launcher-extension": "^1.1.0-alpha.1",
+    "@jupyterlab/logconsole": "^0.1.0-alpha.1",
+    "@jupyterlab/logconsole-extension": "^0.1.0-alpha.1",
     "@jupyterlab/mainmenu": "^1.1.0-alpha.1",
     "@jupyterlab/mainmenu-extension": "^1.1.0-alpha.1",
     "@jupyterlab/markdownviewer": "^1.1.0-alpha.1",
@@ -81,8 +83,6 @@
     "@jupyterlab/notebook-extension": "^1.1.0-alpha.1",
     "@jupyterlab/observables": "^2.3.0-alpha.1",
     "@jupyterlab/outputarea": "^1.1.0-alpha.1",
-    "@jupyterlab/outputconsole": "^0.1.0-alpha.1",
-    "@jupyterlab/outputconsole-extension": "^0.1.0-alpha.1",
     "@jupyterlab/pdf-extension": "^1.1.0-alpha.1",
     "@jupyterlab/rendermime": "^1.1.0-alpha.1",
     "@jupyterlab/rendermime-extension": "^1.1.0-alpha.1",
