--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -154,10 +154,10 @@
       "path": "../outputarea"
     },
     {
-      "path": "../outputconsole"
+      "path": "../logconsole"
     },
     {
-      "path": "../outputconsole-extension"
+      "path": "../logconsole-extension"
     },
     {
       "path": "../pdf-extension"
