--- a/packages/logconsole-extension/package.json
+++ b/packages/logconsole-extension/package.json
@@ -46,6 +46,7 @@
     "@phosphor/algorithm": "^1.1.3",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
+    "@phosphor/signaling": "^1.2.3",
     "react": "~16.8.4"
   },
   "devDependencies": {
