Backport PR #6833: Log Console extension to capture unhandled messages and other activity

--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -124,6 +124,12 @@
       "path": "../launcher-extension"
     },
     {
+      "path": "../logconsole"
+    },
+    {
+      "path": "../logconsole-extension"
+    },
+    {
       "path": "../mainmenu"
     },
     {
