--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -70,6 +70,8 @@
     "@jupyterlab/json-extension": "^1.2.0-alpha.0",
     "@jupyterlab/launcher": "^1.2.0-alpha.0",
     "@jupyterlab/launcher-extension": "^1.2.0-alpha.0",
+    "@jupyterlab/logconsole": "^1.0.0-alpha.0",
+    "@jupyterlab/logconsole-extension": "^1.0.0-alpha.0",
     "@jupyterlab/mainmenu": "^1.2.0-alpha.0",
     "@jupyterlab/mainmenu-extension": "^1.2.0-alpha.0",
     "@jupyterlab/markdownviewer": "^1.2.0-alpha.0",
