--- a/packages/logconsole/package.json
+++ b/packages/logconsole/package.json
@@ -32,19 +32,14 @@
     "watch": "tsc -w --listEmittedFiles"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.9.0",
-    "@jupyterlab/apputils": "^1.2.0-alpha.0",
     "@jupyterlab/coreutils": "^3.2.0-alpha.0",
     "@jupyterlab/outputarea": "^1.2.0-alpha.0",
     "@jupyterlab/rendermime": "^1.2.0-alpha.0",
     "@jupyterlab/services": "^4.2.0-alpha.0",
-    "@jupyterlab/ui-components": "^1.2.0-alpha.0",
     "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/disposable": "^1.3.0",
     "@phosphor/messaging": "^1.3.0",
     "@phosphor/signaling": "^1.3.0",
-    "@phosphor/widgets": "^1.9.0",
-    "react": "~16.8.4"
+    "@phosphor/widgets": "^1.9.0"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
