--- a/packages/rendermime/package.json
+++ b/packages/rendermime/package.json
@@ -47,7 +47,7 @@
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/widgets": "^1.9.0",
     "lodash.escape": "^4.0.1",
-    "marked": "0.6.2"
+    "marked": "^0.7.0"
   },
   "devDependencies": {
     "@types/lodash.escape": "^4.0.6",
