--- a/packages/fileeditor/package.json
+++ b/packages/fileeditor/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/codeeditor": "^2.0.0-alpha.4",
     "@jupyterlab/docregistry": "^2.0.0-alpha.4",
     "@jupyterlab/statusbar": "^2.0.0-alpha.4",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/messaging": "^1.3.1",
     "@lumino/widgets": "^1.9.4",
