--- a/packages/filebrowser/package.json
+++ b/packages/filebrowser/package.json
@@ -52,7 +52,8 @@
     "@lumino/polling": "^1.0.1",
     "@lumino/signaling": "^1.3.2",
     "@lumino/widgets": "^1.9.4",
-    "react": "~16.9.0"
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
