--- a/packages/logconsole-extension/package.json
+++ b/packages/logconsole-extension/package.json
@@ -42,6 +42,7 @@
     "@jupyterlab/rendermime": "^2.0.0-alpha.1",
     "@jupyterlab/statusbar": "^2.0.0-alpha.1",
     "@phosphor/signaling": "^1.3.0",
+    "@phosphor/widgets": "^1.9.0",
     "react": "~16.8.4"
   },
   "devDependencies": {
