--- a/packages/logconsole-extension/package.json
+++ b/packages/logconsole-extension/package.json
@@ -41,6 +41,7 @@
     "@jupyterlab/notebook": "^2.0.0-alpha.1",
     "@jupyterlab/rendermime": "^2.0.0-alpha.1",
     "@jupyterlab/statusbar": "^2.0.0-alpha.1",
+    "@phosphor/messaging": "^1.3.0",
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/widgets": "^1.9.0",
     "react": "~16.8.4"
