Add a log console plugin to log all notebook outputs.
This is for testing purposes. It probably should be reverted later as logging all notebook outputs is rather noisy in the log.

--- a/packages/logconsole-extension/tsconfig.json
+++ b/packages/logconsole-extension/tsconfig.json
@@ -28,7 +28,13 @@
       "path": "../rendermime"
     },
     {
+      "path": "../services"
+    },
+    {
       "path": "../statusbar"
+    },
+    {
+      "path": "../ui-components"
     }
   ]
 }
