--- a/packages/logconsole-extension/package.json
+++ b/packages/logconsole-extension/package.json
@@ -41,7 +41,9 @@
     "@jupyterlab/notebook": "^1.2.0-alpha.2",
     "@jupyterlab/rendermime": "^1.2.0-alpha.2",
     "@jupyterlab/statusbar": "^1.2.0-alpha.2",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.2",
     "@phosphor/signaling": "^1.3.0",
+    "@phosphor/widgets": "^1.9.0",
     "react": "~16.8.4"
   },
   "devDependencies": {
