--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.2.0",
     "@phosphor/widgets": "^1.8.0",
-    "vscode-debugprotocol": "1.35.0"
+    "vscode-debugprotocol": "1.35.0",
+    "react-inspector": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
