Revert "Remove notebook output logging."
This reverts commit 0d4115df3158f5cc3acc79f610cf22d4b2853de5.

--- a/packages/logconsole-extension/tsconfig.json
+++ b/packages/logconsole-extension/tsconfig.json
@@ -28,6 +28,9 @@
       "path": "../rendermime"
     },
     {
+      "path": "../services"
+    },
+    {
       "path": "../statusbar"
     },
     {
