--- a/packages/logconsole-extension/package.json
+++ b/packages/logconsole-extension/package.json
@@ -40,6 +40,7 @@
     "@jupyterlab/mainmenu": "^2.0.0-alpha.1",
     "@jupyterlab/notebook": "^2.0.0-alpha.1",
     "@jupyterlab/rendermime": "^2.0.0-alpha.1",
+    "@jupyterlab/services": "^5.0.0-alpha.1",
     "@jupyterlab/statusbar": "^2.0.0-alpha.1",
     "@jupyterlab/ui-components": "^2.0.0-alpha.1",
     "@phosphor/signaling": "^1.3.0",
