added celltags extension

--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -25,6 +25,12 @@
       "path": "../cells"
     },
     {
+      "path": "../celltags"
+    },
+    {
+      "path": "../celltags-extension"
+    },
+    {
       "path": "../codeeditor"
     },
     {
