--- a/packages/logconsole/package.json
+++ b/packages/logconsole/package.json
@@ -37,6 +37,7 @@
     "@jupyterlab/rendermime": "^2.0.0-alpha.1",
     "@jupyterlab/services": "^5.0.0-alpha.1",
     "@phosphor/coreutils": "^1.3.1",
+    "@phosphor/disposable": "^1.3.0",
     "@phosphor/messaging": "^1.3.0",
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/widgets": "^1.9.0"
