--- a/packages/logconsole-extension/package.json
+++ b/packages/logconsole-extension/package.json
@@ -40,8 +40,10 @@
     "@jupyterlab/mainmenu": "^1.2.0-alpha.3",
     "@jupyterlab/notebook": "^1.2.0-alpha.3",
     "@jupyterlab/rendermime": "^1.2.0-alpha.3",
+    "@jupyterlab/services": "^4.2.0-alpha.3",
     "@jupyterlab/statusbar": "^1.2.0-alpha.3",
     "@jupyterlab/ui-components": "^1.2.0-alpha.3",
+    "@phosphor/coreutils": "^1.3.1",
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/widgets": "^1.9.0",
     "react": "~16.8.4"
