Remove vega 4 extension
See discussion on https://github.com/jupyterlab/jupyterlab/pull/7428 for more information.

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "build:test": "lerna run build --scope \"@jupyterlab/test-*\" --concurrency 1",
     "build:testutils": "cd testutils && jlpm run build",
     "build:utils": "cd buildutils && jlpm run build",
-    "build:vega": "jlpm run build:vega:4 && jlpm run build:vega:5",
-    "build:vega:4": "cd prebuild/vega4 && jlpm && jlpm run build",
+    "build:vega": "jlpm run build:vega:5",
     "build:vega:5": "cd prebuild/vega5 && jlpm && jlpm run build",
     "bump:js:major": "node buildutils/lib/bump-js-major.js",
     "bumpversion": "node buildutils/lib/bumpversion.js",
