--- a/packages/documentsearch/package.json
+++ b/packages/documentsearch/package.json
@@ -39,12 +39,12 @@
     "@jupyterlab/coreutils": "^4.0.0-alpha.1",
     "@jupyterlab/fileeditor": "^2.0.0-alpha.1",
     "@jupyterlab/notebook": "^2.0.0-alpha.1",
+    "@phosphor/algorithm": "^1.2.0",
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/disposable": "^1.3.0",
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/widgets": "^1.9.0",
     "codemirror": "~5.47.0",
-    "lodash": "~4.17.15",
     "react": "~16.8.4"
   },
   "devDependencies": {
