fixed icons & css for dark mode

--- a/packages/celltags-extension/tsconfig.json
+++ b/packages/celltags-extension/tsconfig.json
@@ -26,6 +26,9 @@
       "path": "../application"
     },
     {
+      "path": "../apputils"
+    },
+    {
       "path": "../celltags"
     },
     {
