--- a/packages/celltags/package.json
+++ b/packages/celltags/package.json
@@ -40,12 +40,17 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^2.0.0-alpha.1",
+    "@jupyterlab/apputils": "^2.0.0-alpha.1",
     "@jupyterlab/cells": "^2.0.0-alpha.1",
     "@jupyterlab/notebook": "^2.0.0-alpha.1",
+    "@jupyterlab/ui-components": "^2.0.0-alpha.1",
     "@phosphor/widgets": "^1.9.0",
-    "@types/node": "^12.0.2"
+    "@types/node": "^12.0.2",
+    "react": "~16.8.4",
+    "react-dom": "~16.8.4"
   },
   "devDependencies": {
+    "@types/react-dom": "^16.8.4",
     "rimraf": "~2.6.2",
     "typescript": "~3.5.1"
   }
