Test jupyter lab without nodeJS

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,8 @@ jobs:
           testResultsFiles: 'junit.xml'
         Usage:
           group: 'usage'
+        UsageNoNodeJS:
+          group: 'nonode'
         Docs:
           group: 'docs'
 
