--- a/packages/outputarea/package.json
+++ b/packages/outputarea/package.json
@@ -47,7 +47,7 @@
     "@phosphor/messaging": "^1.3.0",
     "@phosphor/properties": "^1.1.3",
     "@phosphor/signaling": "^1.3.0",
-    "@phosphor/widgets": "^1.9.0"
+    "@phosphor/widgets": "^1.9.0",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
