--- a/packages/apputils/package.json
+++ b/packages/apputils/package.json
@@ -48,13 +48,13 @@
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/virtualdom": "^1.2.0",
     "@phosphor/widgets": "^1.9.0",
-    "@types/react": "~16.8.18",
-    "react": "~16.8.4",
-    "react-dom": "~16.8.4",
+    "@types/react": "^16.9.11",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
     "sanitize-html": "~1.20.1"
   },
   "devDependencies": {
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.9.3",
     "@types/sanitize-html": "^1.18.3",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
