--- a/packages/cells/package.json
+++ b/packages/cells/package.json
@@ -52,10 +52,10 @@
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/virtualdom": "^1.2.0",
     "@phosphor/widgets": "^1.9.0",
-    "react": "~16.8.4"
+    "react": "~16.11.0"
   },
   "devDependencies": {
-    "@types/react": "~16.8.18",
+    "@types/react": "^16.9.11",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
