--- a/packages/json-extension/package.json
+++ b/packages/json-extension/package.json
@@ -40,14 +40,14 @@
     "@phosphor/coreutils": "^1.3.1",
     "@phosphor/messaging": "^1.3.0",
     "@phosphor/widgets": "^1.9.0",
-    "react": "~16.8.4",
-    "react-dom": "~16.8.4",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
     "react-highlighter": "^0.4.0",
     "react-json-tree": "^0.11.0"
   },
   "devDependencies": {
-    "@types/react": "~16.8.18",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.3",
     "@types/react-highlighter": "^0.3.4",
     "@types/react-json-tree": "^0.6.11",
     "rimraf": "~2.6.2",
