--- a/packages/launcher/package.json
+++ b/packages/launcher/package.json
@@ -43,10 +43,10 @@
     "@phosphor/disposable": "^1.3.0",
     "@phosphor/properties": "^1.1.3",
     "@phosphor/widgets": "^1.9.0",
-    "react": "~16.8.4"
+    "react": "~16.11.0"
   },
   "devDependencies": {
-    "@types/react": "~16.8.18",
+    "@types/react": "^16.9.11",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
