--- a/packages/settingeditor/package.json
+++ b/packages/settingeditor/package.json
@@ -46,12 +46,12 @@
     "@phosphor/messaging": "^1.3.0",
     "@phosphor/signaling": "^1.3.0",
     "@phosphor/widgets": "^1.9.0",
-    "react": "~16.8.4",
-    "react-dom": "~16.8.4"
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0"
   },
   "devDependencies": {
-    "@types/react": "~16.8.18",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.3",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
