--- a/packages/statusbar-extension/package.json
+++ b/packages/statusbar-extension/package.json
@@ -49,8 +49,8 @@
     "@phosphor/widgets": "^1.9.0"
   },
   "devDependencies": {
-    "@types/react": "~16.8.18",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.3",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
