--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -40,18 +40,18 @@
     "@phosphor/messaging": "^1.3.0",
     "@phosphor/virtualdom": "^1.2.0",
     "@phosphor/widgets": "^1.9.0",
-    "react": "~16.8.4",
+    "react": "~16.11.0",
     "typestyle": "^2.0.1"
   },
   "devDependencies": {
-    "@types/react": "~16.8.18",
+    "@types/react": "^16.9.11",
     "@types/webpack-env": "^1.13.9",
     "rimraf": "~2.6.2",
     "typedoc": "^0.14.2",
     "typescript": "~3.5.1"
   },
   "peerDependencies": {
-    "react": "~16.8.4"
+    "react": "~16.11.0"
   },
   "publishConfig": {
     "access": "public"
