--- a/packages/vega5-extension/package.json
+++ b/packages/vega5-extension/package.json
@@ -45,7 +45,7 @@
     "typescript": "~3.7.2",
     "vega": "^5.7.3",
     "vega-embed": "^4.2.0",
-    "vega-lite": "^3.4.0"
+    "vega-lite": "^4.0.0-beta.11"
   },
   "publishConfig": {
     "access": "public"
