Remove build system for multiple versions of vega
c.f. the comment from Saul that we can remove this now that we don’t have multiple versions in core: https://github.com/jupyterlab/jupyterlab/pull/7428/#issuecomment-552191427

--- a/packages/vega5-extension/package.json
+++ b/packages/vega5-extension/package.json
@@ -27,7 +27,7 @@
     "lib": "lib/"
   },
   "scripts": {
-    "build": "tsc -b && cd ../../prebuild/vega5 && jlpm && jlpm run build",
+    "build": "tsc -b",
     "clean": "rimraf lib",
     "docs": "typedoc --options tdoptions.json --theme ../../typedoc-theme src",
     "prepublishOnly": "npm run build",
