--- a/packages/vega4-extension/tsconfig.json
+++ b/packages/vega4-extension/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfigbase",
   "compilerOptions": {
     "outDir": "lib",
+    "skipLibCheck": true,
     "types": ["webpack-env"],
     "rootDir": "src"
   },
