Work around bug in giving include files and having composite true
For some reason, typescript itself works fine, but typedoc has this error:

 File ‘[snip]/jupyterlab/packages/coreutils/src/plugin-schema.json' is not listed within the file list of project ''. Projects must list all files or use an 'include' pattern.

This avoids this issue somehow by setting composite to false for typedoc doc builds.

--- a/packages/coreutils/package.json
+++ b/packages/coreutils/package.json
@@ -26,8 +26,8 @@
   },
   "scripts": {
     "build": "tsc -b",
-    "clean": "rimraf lib",
-    "docs": "typedoc src src/plugin-schema.json",
+    "clean": "rimraf lib && rimraf tsconfig.tsbuildinfo",
+    "docs": "typedoc src --tsconfig typedoc-tsconfig.json",
     "prepublishOnly": "npm run build",
     "watch": "tsc -b --watch"
   },
