--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@jupyterlab/codeeditor": "^1.1.0",
     "@jupyterlab/console": "^1.1.0",
     "@jupyterlab/coreutils": "^3.1.0",
+    "@jupyterlab/docregistry": "^1.1.0",
     "@jupyterlab/fileeditor": "^1.1.0",
     "@jupyterlab/launcher": "^1.1.0",
     "@jupyterlab/notebook": "^1.1.0",
