--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "create:test": "node buildutils/lib/create-test-package.js",
     "create:theme": "node buildutils/lib/create-theme.js",
     "deduplicate": "jlpm yarn-deduplicate -s fewer",
-    "docs": "lerna run docs",
+    "docs": "lerna run docs --ignore \"@jupyterlab/coreutils\" ",
     "eslint": "eslint --fix .",
     "eslint:check": "eslint .",
     "get:dependency": "node buildutils/lib/get-dependency.js",
@@ -99,7 +99,7 @@
     "husky": "^2.3.0",
     "lerna": "^3.13.2",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
