--- a/packages/notebook-extension/tsconfig.json
+++ b/packages/notebook-extension/tsconfig.json
@@ -37,6 +37,9 @@
       "path": "../notebook"
     },
     {
+      "path": "../property-inspector"
+    },
+    {
       "path": "../rendermime"
     },
     {
