--- a/packages/json-extension/package.json
+++ b/packages/json-extension/package.json
@@ -40,14 +40,14 @@
     "@lumino/coreutils": "^1.4.0",
     "@lumino/messaging": "^1.3.1",
     "@lumino/widgets": "^1.9.4",
-    "react": "~16.12.0",
-    "react-dom": "~16.12.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
     "react-highlighter": "^0.4.3",
     "react-json-tree": "^0.11.2"
   },
   "devDependencies": {
     "@types/react": "~16.9.16",
-    "@types/react-dom": "^16.9.4",
+    "@types/react-dom": "~16.9.4",
     "@types/react-highlighter": "^0.3.4",
     "@types/react-json-tree": "^0.6.11",
     "rimraf": "~3.0.0",
