--- a/packages/settingeditor/package.json
+++ b/packages/settingeditor/package.json
@@ -46,12 +46,12 @@
     "@lumino/messaging": "^1.3.1",
     "@lumino/signaling": "^1.3.2",
     "@lumino/widgets": "^1.9.4",
-    "react": "~16.12.0",
-    "react-dom": "~16.12.0"
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0"
   },
   "devDependencies": {
     "@types/react": "~16.9.16",
-    "@types/react-dom": "^16.9.4",
+    "@types/react-dom": "~16.9.4",
     "rimraf": "~3.0.0",
     "typedoc": "^0.15.4",
     "typescript": "~3.7.3"
