--- a/packages/statusbar-extension/package.json
+++ b/packages/statusbar-extension/package.json
@@ -50,7 +50,7 @@
   },
   "devDependencies": {
     "@types/react": "~16.9.16",
-    "@types/react-dom": "^16.9.4",
+    "@types/react-dom": "~16.9.4",
     "rimraf": "~3.0.0",
     "typedoc": "^0.15.4",
     "typescript": "~3.7.3"
