Move example code for services into tested files.

--- a/packages/services/examples/browser/package.json
+++ b/packages/services/examples/browser/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@jupyterlab/coreutils": "^4.0.0-alpha.4",
-    "@jupyterlab/services": "^5.0.0-alpha.4"
+    "@jupyterlab/services": "^5.0.0-alpha.4",
+    "@lumino/coreutils": "^1.4.0"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
