Turn on strict null checks (except for services)

--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "lib",
     "rootDir": "src",
     "module": "commonjs",
+    "strictNullChecks": false,
     "types": ["node"]
   },
   "include": ["src/**/*"],
