--- a/packages/metapackage/tsconfig.json
+++ b/packages/metapackage/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../application"
@@ -239,6 +241,9 @@
     },
     {
       "path": "../vega5-extension"
+    },
+    {
+      "path": "../nbformat"
     }
   ]
 }
