--- a/packages/console/tsconfig.json
+++ b/packages/console/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../apputils"
@@ -17,6 +19,9 @@
     },
     {
       "path": "../coreutils"
+    },
+    {
+      "path": "../nbformat"
     },
     {
       "path": "../observables"
