--- a/packages/logconsole-extension/tsconfig.json
+++ b/packages/logconsole-extension/tsconfig.json
@@ -5,7 +5,9 @@
     "rootDir": "src",
     "strictNullChecks": false
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../application"
@@ -36,6 +38,9 @@
     },
     {
       "path": "../ui-components"
+    },
+    {
+      "path": "../nbformat"
     }
   ]
 }
