--- a/packages/logconsole/tsconfig.json
+++ b/packages/logconsole/tsconfig.json
@@ -5,10 +5,15 @@
     "rootDir": "src",
     "strictNullChecks": false
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../coreutils"
+    },
+    {
+      "path": "../nbformat"
     },
     {
       "path": "../outputarea"
