--- a/packages/codeeditor/tsconfig.json
+++ b/packages/codeeditor/tsconfig.json
@@ -4,10 +4,15 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../coreutils"
+    },
+    {
+      "path": "../nbformat"
     },
     {
       "path": "../observables"
