--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -39,6 +39,7 @@
     "@jupyterlab/cells": "^2.0.0-alpha.4",
     "@jupyterlab/codeeditor": "^2.0.0-alpha.4",
     "@jupyterlab/coreutils": "^4.0.0-alpha.4",
+    "@jupyterlab/nbformat": "^2.0.0-alpha.4",
     "@jupyterlab/observables": "^3.0.0-alpha.4",
     "@jupyterlab/rendermime": "^2.0.0-alpha.4",
     "@jupyterlab/services": "^5.0.0-alpha.4",
