--- a/packages/outputarea/tsconfig.json
+++ b/packages/outputarea/tsconfig.json
@@ -4,13 +4,15 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../apputils"
     },
     {
-      "path": "../coreutils"
+      "path": "../nbformat"
     },
     {
       "path": "../observables"
