settingregistry package + tests

--- a/packages/apputils/tsconfig.json
+++ b/packages/apputils/tsconfig.json
@@ -4,13 +4,18 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../coreutils"
     },
     {
       "path": "../services"
+    },
+    {
+      "path": "../settingregistry"
     },
     {
       "path": "../ui-components"
