--- a/packages/codemirror-extension/tsconfig.json
+++ b/packages/codemirror-extension/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../application"
@@ -16,9 +18,6 @@
       "path": "../codemirror"
     },
     {
-      "path": "../coreutils"
-    },
-    {
       "path": "../docregistry"
     },
     {
@@ -26,6 +25,9 @@
     },
     {
       "path": "../mainmenu"
+    },
+    {
+      "path": "../settingregistry"
     },
     {
       "path": "../statusbar"
