--- a/packages/fileeditor-extension/tsconfig.json
+++ b/packages/fileeditor-extension/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../application"
@@ -35,6 +37,9 @@
     },
     {
       "path": "../mainmenu"
+    },
+    {
+      "path": "../settingregistry"
     },
     {
       "path": "../statusbar"
