--- a/packages/notebook-extension/tsconfig.json
+++ b/packages/notebook-extension/tsconfig.json
@@ -51,6 +51,9 @@
       "path": "../services"
     },
     {
+      "path": "../settingregistry"
+    },
+    {
       "path": "../statusbar"
     }
   ]
