--- a/packages/settingeditor/tsconfig.json
+++ b/packages/settingeditor/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../apputils"
@@ -20,6 +22,9 @@
     },
     {
       "path": "../rendermime"
+    },
+    {
+      "path": "../settingregistry"
     },
     {
       "path": "../ui-components"
