--- a/packages/shortcuts-extension/tsconfig.json
+++ b/packages/shortcuts-extension/tsconfig.json
@@ -4,13 +4,15 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/*"],
+  "include": [
+    "src/*"
+  ],
   "references": [
     {
       "path": "../application"
     },
     {
-      "path": "../coreutils"
+      "path": "../settingregistry"
     }
   ]
 }
