--- a/packages/console-extension/package.json
+++ b/packages/console-extension/package.json
@@ -45,6 +45,7 @@
     "@jupyterlab/launcher": "^2.0.0-alpha.4",
     "@jupyterlab/mainmenu": "^2.0.0-alpha.4",
     "@jupyterlab/rendermime": "^2.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1",
     "@lumino/coreutils": "^1.4.0",
     "@lumino/disposable": "^1.3.2",
