--- a/packages/docmanager-extension/package.json
+++ b/packages/docmanager-extension/package.json
@@ -43,6 +43,7 @@
     "@jupyterlab/docregistry": "^2.0.0-alpha.4",
     "@jupyterlab/mainmenu": "^2.0.0-alpha.4",
     "@jupyterlab/services": "^5.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@jupyterlab/statusbar": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1",
     "@lumino/coreutils": "^1.4.0",
