--- a/packages/extensionmanager-extension/package.json
+++ b/packages/extensionmanager-extension/package.json
@@ -38,9 +38,9 @@
   "dependencies": {
     "@jupyterlab/application": "^2.0.0-alpha.4",
     "@jupyterlab/apputils": "^2.0.0-alpha.4",
-    "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/extensionmanager": "^2.0.0-alpha.4",
-    "@jupyterlab/mainmenu": "^2.0.0-alpha.4"
+    "@jupyterlab/mainmenu": "^2.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
