--- a/packages/fileeditor-extension/package.json
+++ b/packages/fileeditor-extension/package.json
@@ -46,6 +46,7 @@
     "@jupyterlab/fileeditor": "^2.0.0-alpha.4",
     "@jupyterlab/launcher": "^2.0.0-alpha.4",
     "@jupyterlab/mainmenu": "^2.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@jupyterlab/statusbar": "^2.0.0-alpha.4",
     "@lumino/commands": "^1.9.0",
     "@lumino/coreutils": "^1.4.0",
