--- a/packages/settingeditor-extension/package.json
+++ b/packages/settingeditor-extension/package.json
@@ -41,7 +41,8 @@
     "@jupyterlab/codeeditor": "^2.0.0-alpha.4",
     "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/rendermime": "^2.0.0-alpha.4",
-    "@jupyterlab/settingeditor": "^2.0.0-alpha.4"
+    "@jupyterlab/settingeditor": "^2.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4"
   },
   "devDependencies": {
     "rimraf": "~3.0.0",
