--- a/packages/settingeditor/package.json
+++ b/packages/settingeditor/package.json
@@ -40,6 +40,7 @@
     "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/inspector": "^2.0.0-alpha.4",
     "@jupyterlab/rendermime": "^2.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@jupyterlab/ui-components": "^2.0.0-alpha.4",
     "@lumino/commands": "^1.9.0",
     "@lumino/coreutils": "^1.4.0",
