--- a/packages/statusbar-extension/package.json
+++ b/packages/statusbar-extension/package.json
@@ -40,11 +40,11 @@
     "@jupyterlab/apputils": "^2.0.0-alpha.4",
     "@jupyterlab/cells": "^2.0.0-alpha.4",
     "@jupyterlab/console": "^2.0.0-alpha.4",
-    "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/docregistry": "^2.0.0-alpha.4",
     "@jupyterlab/fileeditor": "^2.0.0-alpha.4",
     "@jupyterlab/mainmenu": "^2.0.0-alpha.4",
     "@jupyterlab/notebook": "^2.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@jupyterlab/statusbar": "^2.0.0-alpha.4",
     "@lumino/widgets": "^1.9.4"
   },
