--- a/packages/terminal-extension/package.json
+++ b/packages/terminal-extension/package.json
@@ -38,11 +38,11 @@
   "dependencies": {
     "@jupyterlab/application": "^2.0.0-alpha.4",
     "@jupyterlab/apputils": "^2.0.0-alpha.4",
-    "@jupyterlab/coreutils": "^4.0.0-alpha.4",
     "@jupyterlab/launcher": "^2.0.0-alpha.4",
     "@jupyterlab/mainmenu": "^2.0.0-alpha.4",
     "@jupyterlab/running": "^2.0.0-alpha.4",
     "@jupyterlab/services": "^5.0.0-alpha.4",
+    "@jupyterlab/settingregistry": "^2.0.0-alpha.4",
     "@jupyterlab/terminal": "^2.0.0-alpha.4",
     "@lumino/algorithm": "^1.2.1",
     "@lumino/widgets": "^1.9.4"
